<resources>
    <string name="app_name">My Products</string>

    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="button_login">Login to account</string>
    <string name="button_account_create">Create Account</string>
    <string name="button_createAc">Create new account</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="reg_confirm_pass">Confirm Password</string>
    <string name="reg_login_text">Already have an account?</string>
    <string name="setup_save">Save Account settings</string>
    <string name="save_settings">Save Account Settings</string>
    <string name="post_image">default post image</string>
    <string name="company_name">Company Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="account_settings_save">Save Account Settings</string>


    <string-array name="units">
        <item>katha</item>
        <item>bigha</item>
        <item>acres</item>
        <item>shotok</item>
        <item>decimel</item>
    </string-array>

    <string-array name="land_type">
        <item>Agricultural</item>
        <item>Commercial</item>
        <item>Residential</item>
        <item>Other</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="email">Email Address</string>
    <string name="company_ratings">Company Ratings : </string>
    <string name="address_">Address :</string>
    <string name="contact">Contact :</string>
    <string name="all_products">All Products</string>
    <string name="qty">Quantity ?</string>
    <string name="product_price">Product\'s Price :</string>
    <string name="shipping">Shipping Fee :</string>
    <string name="total_price">Total Price :</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="handle_info">To handle your information easily,</string>
    <string name="from">From</string>
    <string name="orders">Orders :</string>
    <string name="name">Name :</string>
    <string name="altContact">Alt. Contact :</string>
    <string name="done">Done</string>
</resources>
