<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/add_btn_shape"
                android:gravity="center"
                android:text="1"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toEndOf="@+id/qty_remove"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <ImageButton
                android:id="@+id/qty_add"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:background="@color/whiteTransparentHalf"
                android:scaleType="fitXY"
                app:layout_constraintStart_toEndOf="@+id/quantity"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                app:srcCompat="@drawable/ic_add_circle_black_24dp" />

            <ImageButton
                android:id="@+id/qty_remove"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/whiteTransparentHalf"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                app:srcCompat="@drawable/ic_remove_circle" />

            <TextView
                android:id="@+id/cart_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/product_name"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/qty"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cart_product_name" />

            <ImageView
                android:id="@+id/cart_product_image"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/default_post_image" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/from"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qty_remove" />

            <TextView
                android:id="@+id/cart_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/company_name"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/quantity" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/price"
                app:layout_constraintEnd_toStartOf="@+id/cart_product_price"
                app:layout_constraintTop_toBottomOf="@+id/cart_product_image" />

            <TextView
                android:id="@+id/cart_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/product_price"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/cart_product_image" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:text="tk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cart_product_image" />

            <ImageView
                android:id="@+id/cart_product_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_clear" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>